@@ -1,3 +1,7 @@
+2013-09-19  Jakub Jelinek  <jakub@redhat.com>
+
+	* testsuite/libgomp.c/sections-2.c: New test.
+
 2013-05-31  Release Manager
 
 	* GCC 4.8.1 released.
