@@ -1,3 +1,8 @@
+2013-09-19  Jakub Jelinek  <jakub@redhat.com>
+
+	* omp-low.c (expand_omp_sections): Always pass len - 1 to
+	GOMP_sections_start, even if !exit_reachable.
+
 2013-09-18  Richard Earnshaw  <rearnsha@arm.com>
 
 	* arm.c (arm_expand_prologue): Validate architecture supports
